# cffiwhat

./: pyproject.toml
cffiwhat/: __main__.py
