[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cffiwhat"
authors = [{name = "Alistair Buxton", email = "a.j.buxton@gmail.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "cffi",
    "setuptools; python_version >= '3.12'",
]

[project.scripts]
cffiwhat = "cffiwhat.__main__:main"

[project.urls]
Home = "https://github.com/ali1234/cffiwhat"


